--- a/src/styles/scss/_features.scss
+++ b/src/styles/scss/_features.scss
@@ -132,6 +132,10 @@
 
     @media (max-width: 768px) {
         padding: var(--space-3);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
 }
 
